<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/rename_btn_1"
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:nextFocusDown="@+id/set_home_page_1"
            android:nextFocusUp="@+id/rest_1"
            android:text="@string/rename_text"
            android:textColor="#ff0000"
            android:textSize="30sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:contentDescription="@string/gallery_2_text"
            android:src="@drawable/selector" />

        <Button
            android:id="@+id/set_home_page_1"
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:nextFocusDown="@+id/rest_1"
            android:nextFocusUp="@+id/rename_btn_1"
            android:text="@string/set_homepage_text"
            android:textColor="#ff0000"
            android:textSize="30sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/rest_1"
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:nextFocusUp="@+id/set_home_page_1"
            android:text="@string/rest_text"
            android:textColor="#ff0000"
            android:textSize="30sp"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/signal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="#ff0000"
        android:textSize="30sp" />

</RelativeLayout>